- get map stats working again - plug degrees mins secs into units